// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button With Icon 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  <i
    aria-hidden="true"
    className="right arrow icon"
  />
   
</button>
`;

exports[`Storyshots Button With Icon and Text 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  Continue 
  <i
    aria-hidden="true"
    className="right arrow icon"
  />
   
</button>
`;

exports[`Storyshots Button With Primary Color 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
   
</button>
`;

exports[`Storyshots Button With Secondary Color 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
   
</button>
`;

exports[`Storyshots Button With some emoji 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
  <span
    aria-label="emojis"
    role="img"
  >
    😀 😎 👍 💯
  </span>
   
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  tabIndex={undefined}
>
   
   
</button>
`;

exports[`Storyshots Menu default 1`] = `
<div
  className="ui menu"
/>
`;
